up to exercise 5

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="author" content="Magdalena Wollin">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Full Stack: First JavaScipt Application</title>
+  <script src="js/script.js"></script>
 </head>
-<body onload="javascript:alert('Assignment 01 te01')">
+<body>
   <h1>Assignment 01</h1>
-  <script src="script.js"></script> 
 </body>
