completed up to alert boxes

--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-<head lang=""en">
+<html lang="en">
+<head>
   <meta charset="UTF-8">
-  <meta name="description" content="Free Web tutorials">
-  <meta name="keywords" content="HTML, CSS, JavaScript">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="author" content="Magdalena Wollin">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Full Stack: First JavaScipt Application</title>
   <script src="js/script.js"></script>
 </head>
-<body>
-  <h1>Assignment 01</h1>
+
+<!--<body onload="javascript:alert('Hello ' + 'Magdalena Wollin, welcome to the JavaScript class!')" >
+-->
+<body onload="javascript:alert(['Hello', ' ', myName].join('') + ', welcome to the JavaScript class!')" >
+
+<!--<body onload="javascript:alert('Hello Magdalena Wollin\n'+'Welcome to the JavaScript class!')" > -->
+    <h1>Assignment 01 completed</h1>
 </body>
+
+</html>
