--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
   <title>Full Stack: First JavaScipt Application</title>
   <script src="js/script.js"></script>
 </head>
-
-<!--<body onload="javascript:alert('Hello ' + 'Magdalena Wollin, welcome to the JavaScript class!')" >
+<body onload="javascript:alert('Hello ' + myName + '.\nWelcome to the '+ myCourse + 'class!')" >
+<!-- 
+  <body onload="javascript:alert(['Hello', ' ', 'Magdalena Wollin'].join('') + ', welcome to the JavaScript class!')" >
+  <body onload="javascript:alert(['Hello', ' ', myName].join('') + ', welcome to the JavaScript class!')" >
+  <body onload="javascript:alert('Hello ' + myName +', welcome to the '+ myCourse + 'class!')" >
+  <body onload="javascript:alert('Hello ' + myName +'.\nWelcome to the '+ myCourse + 'class!')" >
 -->
-<body onload="javascript:alert(['Hello', ' ', myName].join('') + ', welcome to the JavaScript class!')" >
-
-<!--<body onload="javascript:alert('Hello Magdalena Wollin\n'+'Welcome to the JavaScript class!')" > -->
     <h1>Assignment 01 completed</h1>
 </body>
 
